# docker-cioos-dashboards

./: .env_sample  .gitignore  CMAR_dashboardv3.py  Dockerfile  FORCE_dashboardv1.ipynb  FORCE_dashboardv1.py  HurricaneLarryDashboard.py  PDBcioos_june1.py  README.md  docker-compose.debug.yml  docker-compose.yml  environment.yml  index.html  priyal_070522_v1.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: FORCE_dashboardv1-checkpoint.ipynb  priyal_060522_v2-checkpoint.ipynb  priyal_070522_v1-checkpoint.ipynb  priyal_070522_v2-checkpoint.py
assets/: main.css
myapp/: main.py
tests/: dataclass_test.py
viz/: app.py  data_classes.py  data_collect.py  data_factory.py  environment.yml  ids_sample.yaml  viz.py
viz/assets/: cioos.css  custom-script.js
